# Frequency

./: .gitignore  BOT_Wild_West_Post_Office.py  Procfile  Procfile.txt  README.md  data.json  functions.py  index.php  nltk.txt  pyproject.toml  requirements.txt  run.py  to_pyproject
PsycopgSuite/: Constraints.py  Model.py  Operations.py  Query.py  Settings.py  Specify.py  __init__.py
bot/: Diagram bez tytułu.drawio  bot.py  configuartion.json  configuration.json  pyproject.toml
bot/code/: snippets.txt
bot/cogs/: administration.py  commandErrorHandler.py  configuration.py  (+5 more)
charts/: hexchart.py  linechart.py
cogs/: database_maintenance.py  embeds.py  error_handling.py  error_handling.txt  information.py  management.py  music.py  neurolinguistic_AI.py  setup.py  spam_detection.py  talk_AI.py  vchannels.py  voice.py
config/: client.json  client.md  config.py  example.json  general.json  log.conf
data_base/: functions.py
database/: db.py
db/: db.py
dependencies/: config.py
deprecated_web/: .htaccess  ideas-schemas.txt  main.php  oauth_test.php
discord_bot/: BOT_Wild_West_Post_Office.py  endpoints.py  functions.py  ideas.txt  nltk
frequency/: customs.py  frequency.config  frequency.py
functions/: doable.py
music/: Objects.py
notes/: tips.txt
packets/: PIBot.py  platform.py
test/: test_bot.py
views/: Confirm.py  VCConsole.py
web/: .htaccess  Procfile  base_styles.css  composer.json  config.php  dcOauth.php  dc_mng.php  essential_styles.css  home.html  home.php  ideas-schemas.txt  index.php  main.php  manage.php  manageDB.php  scripts.js
(+98 files in other folders)
