[tool.poetry]
name = "discord-bot-post-office"
version = "0.1.0"
description = ""
authors = ["Łukasz Kocielnik <lkocieln@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.6"
"discord.py-message-components" = "^1.7.5"
"discord.py" = "^1.7.3"
requests = "^2.27.1"
youtube_dl = "^2021.12.17"
ffmpeg = "^1.4"
PyNaCl = "^1.5.0"
python-dotenv = "0.15.0"
psycopg2 = "^2.9.3"
nltk = "^3.7"
Flask = "^2.1.2"
discord-py-slash-command = "3.0.3"

[tool.poetry.dev-dependencies]
"discord.py-stubs" = "^1.7.3"
pylint = "^2.14.1"
pytest = "^7.1.2"
types-psycopg2 = "^2.9.16"
mypy = "^0.961"
types-requests = "^2.27.30"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
